Drop Right-To-Use data and access methods.
This creates version 3.1.0 including database scripts.

Change-Id: Ie7d56c8b37d3479782e7136515bc055d3827c4c2
Issue-ID: ACUMOS-3460
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>